# iDeform

./: CMakeLists.txt  LICENSE  README.md  versions.md
cmake/: FindMaya.cmake
modules/: iDeform.mod.OSX_template  iDeform.mod.linux_template  iDeform.mod.macOS_template  iDeform.mod.win_template
modules/iDeform/plug-ins/macOS/2016.5/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2017/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2018/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2019/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2020/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2022/: iDeform.bundle
modules/iDeform/plug-ins/macOS/2023/: iDeform.bundle
modules/iDeform/plug-ins/win64/2016.5/: iDeform.mll
modules/iDeform/plug-ins/win64/2017/: iDeform.mll
modules/iDeform/plug-ins/win64/2018/: iDeform.mll
modules/iDeform/plug-ins/win64/2019/: iDeform.mll
modules/iDeform/scripts/: AEiCollideTemplate.mel  AEiDisplaceTemplate.mel  AEiSkinDeformTemplate.mel  iCollide.mel  iCollideCheckForMesh.mel  iCollideConnectParentMatrix.mel  iCollideDisplayCollisionColors.mel  iCollideRemove.mel  iCollideReplace.mel  iCollideSwap.mel  iDeformCreateMenu.mel  iDeformFindNextIndex.mel  iDeformHistoryHasDeformer.mel  iDisplace.mel  iDisplaceConnectColorMesh.mel  iDisplaceConnectDropoff.mel  iSkinDeform.mel  iSkinDeformRemove.mel  iSkinDeformReplace.mel  iSkinDeformResetRestPosition.mel  performiDisplaceLocatorChain.mel  userSetup.py
source/: iCollide.cpp  iCollide.h  iDisplace.cpp  iDisplace.h  iSkinDeform.cpp  iSkinDeform.h  pluginMain.cpp
(+3 files in other folders)
